--- a/khan-exercises/exercises/absolute_value_of_complex_numbers.html
+++ b/khan-exercises/exercises/absolute_value_of_complex_numbers.html
@@ -2,97 +2,94 @@
 <html data-require="math graphie math-format">
 <head>
     <meta charset="UTF-8" />
-    <title>Absolute value of complex numbers</title>
-    <script src="../khan-exercise.js"></script>
+	<title>Absolute waarde van complexe getallen</title>
+	<script src="../khan-exercise.js"></script>
 </head>
 <body>
-    <div class="exercise">
-    <div class="vars">
-        <var id="REAL">randRangeExclude( -8, 8, [ -1, 0, 1, 2 ] )</var>
-        <var id="IMAG">randRangeExclude( -8, 8, [ -1, 0, 1, 2 ] )</var>
-        <var id="ABS_SQUARE">REAL * REAL + IMAG * IMAG</var>
-        <var id="REPRESENTATION">complexNumber( REAL, IMAG )</var>
-    </div>
+	<div class="exercise">
+	<div class="vars">
+		<var id="REAL">randRangeExclude( -8, 8, [ -1, 0, 1, 2 ] )</var>
+		<var id="IMAG">randRangeExclude( -8, 8, [ -1, 0, 1, 2 ] )</var>
+		<var id="ABS_SQUARE">REAL * REAL + IMAG * IMAG</var>
+		<var id="REPRESENTATION">complexNumber( REAL, IMAG )</var>
+	</div>
 
-    <div class="problems">
-        <div>
-            <p class="question">
-                Determine the absolute value of the following complex number:
-            </p>
-            <p>
-                <code><var>REPRESENTATION</var></code>
-            </p>
-            <div class="solution" data-type="radical">
-                <var>ABS_SQUARE</var>
-            </div>
-            <div class="hints">
-                <p>
-                    The absolute value of any number is its distance from zero.
-                    As complex numbers can be visualized as points on the complex plane, absolute values 
-                    of complex numbers can be determined using the distance formula.
-                </p>
-                <div>
-                    <div class="graphie" id="graph">
-                        graphInit({
-                        range: [[-10, 10], [-10, 10]],
-                            scale: 20,
-                            tickStep: 1,
-                            labelStep: 1,
-                        });
-                        label( [10, 0.5], "Re", "left" );
-                        label( [0.5, 9], "Im", "right" );
-                        circle( [REAL, IMAG], 3 / 20, {
-                            fill: KhanUtil.BLUE,
-                            stroke: "none"
-                        });
-                        label( [REAL, IMAG], REPRESENTATION, "left", {
-                            color: KhanUtil.BLUE,
-                            labelDistance: 10
-                        } );
-                    </div>
-                    <p>
-                        <code><var>REPRESENTATION</var></code> is plotted as a <strong class="hint_blue">blue</strong> circle above.
-                    </p>
-                </div>
-                <div>
-                    <div class="graphie" data-update="graph">
-                        path([ [0,0], [REAL, IMAG]], {
-                            stroke: KhanUtil.ORANGE 
-                        });
-                    </div>
-                    <p>
-                        The absolute value we need is the length of the <strong class="hint_orange">orange</strong> line segment.
-                    </p>
-                </div>
-                <div>
-                    <div class="graphie" data-update="graph">
-                        path([ [0,0], [REAL, 0], [REAL, IMAG]], {
-                            stroke: KhanUtil.BLUE
-                        });
-                    </div>
-                    <p>
-                        The <strong class="hint_orange">orange</strong> line segment is the hypotenuse of a right triangle.
-                        Its two legs (shown in <strong class="hint_blue">blue</strong>) have lengths <code><var>abs( REAL )</var></code> and <code><var>abs( IMAG )</var></code>, which corresponds
-                        to the absolute values of the real and imaginary parts of the complex number <code><var>REPRESENTATION</var></code>.
-                    </p>
-                </div>
-                <p>
-                    Substituting into the Pythagorean theorem:<br />
-                    <code>\qquad |<var>REPRESENTATION</var>|^2 = <var>abs( REAL )</var>^2 + <var>abs( IMAG )</var>^2</code>, so <br />
-                    <code>\qquad |<var>REPRESENTATION</var>| = \sqrt{<var>abs( REAL )</var>^2 + <var>abs( IMAG )</var>^2}</code>.
-                </p>
-                <p>
-                    <code>\qquad \sqrt{<var>abs(REAL)</var>^2 + <var>abs(IMAG)</var>^2} = \sqrt{<var>REAL * REAL</var> + <var>IMAG * IMAG</var>} = \sqrt{<var>ABS_SQUARE</var>}</code>
-                </p>
-                <p data-if="squareRootCanSimplify( ABS_SQUARE )">
-                    Simplifying the radical gives <code><var>formattedSquareRootOf( ABS_SQUARE )</var></code>. That is the absolute value of <code><var>REPRESENTATION</var></code>.
-                </p>
-                <p data-else>
-                    The radical cannot be simplified. The absolute value of <code><var>REPRESENTATION</var></code> is <code>\sqrt{<var>ABS_SQUARE</var>}</code>.
-                </p>
-            </div>
-        </div>
-    </div>
-    </div>
+	<div class="problems">
+		<div>
+			<p class="question">
+				Bereken de absolute waarde van het volgende complexe getal:
+			</p>
+			<p>
+				<code><var>REPRESENTATION</var></code>
+			</p>
+			<div class="solution" data-type="radical">
+				<var>ABS_SQUARE</var>
+			</div>
+			<div class="hints">
+				<p>
+					De absolute waarde van elk getal is zijn afstand tot nul. Omdat complexe getallen getoond kunnen worden op het complexe vlak, kunnen absolute waarden van complexe getallen hierin getekend worden met de formule voor de afstand.
+				</p>
+				<div>
+					<div class="graphie" id="graph">
+						graphInit({
+						range: [[-10, 10], [-10, 10]],
+							scale: 20,
+							tickStep: 1,
+							labelStep: 1,
+						});
+						label( [10, 0.5], "Re", "left" );
+						label( [0.5, 9], "Im", "right" );
+						circle( [REAL, IMAG], 3 / 20, {
+							fill: KhanUtil.BLUE,
+							stroke: "none"
+						});
+						label( [REAL, IMAG], REPRESENTATION, "left", {
+							color: KhanUtil.BLUE,
+							labelDistance: 10
+						} );
+					</div>
+					<p>
+						<code><var>REPRESENTATION</var></code> is hierboven getekend als een <strong class="hint_blue">blauwe</strong> cirkel.
+					</p>
+				</div>
+				<div>
+					<div class="graphie" data-update="graph">
+						path([ [0,0], [REAL, IMAG]], {
+							stroke: KhanUtil.ORANGE 
+						});
+					</div>
+					<p>
+						De absolute waarde die we nodig hebben is de lengte van het <strong class="hint_orange">oranje</strong> lijnstuk.
+					</p>
+				</div>
+				<div>
+					<div class="graphie" data-update="graph">
+						path([ [0,0], [REAL, 0], [REAL, IMAG]], {
+							stroke: KhanUtil.BLUE
+						});
+					</div>
+					<p>
+						De <strong class="hint_orange">oranje</strong> lijn is de hypotenusa van een rechte driehoek.
+						De twee zijden (getekend in <strong class="hint_blue">blauw</strong>) hebben de lengtes <code><var>abs( REAL )</var></code> en <code><var>abs( IMAG )</var></code>, wat overeenkomt met de absolute waarden van de reëele en imaginaire delen van het complexe getal <code><var>REPRESENTATION</var></code>.
+					</p>
+				</div>
+				<p>
+					Vervang dit in de stelling van Pythagoras:<br />
+					<code>\qquad |<var>REPRESENTATION</var>|^2 = <var>abs( REAL )</var>^2 + <var>abs( IMAG )</var>^2</code>, so <br />
+					<code>\qquad |<var>REPRESENTATION</var>| = \sqrt{<var>abs( REAL )</var>^2 + <var>abs( IMAG )</var>^2}</code>.
+				</p>
+				<p>
+					<code>\qquad \sqrt{<var>abs(REAL)</var>^2 + <var>abs(IMAG)</var>^2} = \sqrt{<var>REAL * REAL</var> + <var>IMAG * IMAG</var>} = \sqrt{<var>ABS_SQUARE</var>}</code>
+				</p>
+				<p data-if="squareRootCanSimplify( ABS_SQUARE )">
+					Vereenvoudigd geeft dit <code><var>formattedSquareRootOf( ABS_SQUARE )</var></code>. Dat is de absolute waarde van <code><var>REPRESENTATION</var></code>.
+				</p>
+				<p data-else>
+					De radicaal worden vereenvoudigd. De absolute waarde van <code><var>REPRESENTATION</var></code> is <code>\sqrt{<var>ABS_SQUARE</var>}</code>.
+				</p>
+			</div>
+		</div>
+	</div>
+	</div>
 </body>
 
