--- a/khan-exercises/exercises/area_of_a_circle.html
+++ b/khan-exercises/exercises/area_of_a_circle.html
@@ -48,7 +48,7 @@
             var c = graph.circle( [0, 0], 1, { "fill": "#ffcccc", "stroke-width": 0 } );
             $(c.node).insertBefore($(graph.raphael.canvas).find("ellipse")[0]);
 
-            graph.label( [0, 0.5], "\\color{" + K_COLOR + "}{K = " + R*R + "\\pi}", "above" );
+            graph.label( [0, 0.5], "\\color{" + K_COLOR + "}{O = " + R*R + "\\pi}", "above" );
         }
     </script>
 </head>
@@ -73,7 +73,7 @@
                     drawRadius( R );
                 </div>
                 <div>
-                    <p>Gebruik de formule voor de oppervlakte van de cirkel <code>K= \pi r^2</code>, Dus <code>K= \pi \cdot \color{<var>R_COLOR</var>}{<var>R</var>}^2 = \color{<var>K_COLOR</var>}{<var>R * R</var>\pi}</code>.</p>
+                    <p>Gebruik de formule voor de oppervlakte van de cirkel <code>O= \pi r^2</code>, Dus <code>O= \pi \cdot \color{<var>R_COLOR</var>}{<var>R</var>}^2 = \color{<var>K_COLOR</var>}{<var>R * R</var>\pi}</code>.</p>
 
                     <div class="graphie" data-update="circle">
                         drawArea( R );
@@ -91,7 +91,7 @@
                 <p>Veronderstel dat het oppervlak van de cirkel <code>\color{<var>K_COLOR</var>}{<var>R === 1 ? "" : R * R</var>\pi}</code> is. Hoe groot is de omtrek?</p>
             </div>
 
-            <div class="solution" data-forms="integer, proper, improper, mixed, decimal, pi"><var>R</var></div>
+            <div class="solution" data-forms="integer, proper, improper, mixed, decimal, pi"><var>Math.PI * R * 2</var></div>
 
             <div class="hints">
                 <div class="graphie" id="circle">
@@ -100,7 +100,8 @@
                     drawArea( R );
                 </div>
                 <div>
-                    <p>Gebruik de formule voor de oppervlakte van een cirkel <code>K = \pi r^2</code>, dus <code>r = \sqrt{K / \pi} = \sqrt{\color{<var>K_COLOR</var>}{<var>R * R</var>\pi} / \pi} = \color{<var>R_COLOR</var>}{<var>R</var>}</code>.</p>
+                    <p>Gebruik de formule voor de oppervlakte van een cirkel <code>O = \pi r^2</code>, dus <code>r = \sqrt{O / \pi} = \sqrt{\color{<var>K_COLOR</var>}{<var>R * R</var>\pi} / \pi} = \color{<var>R_COLOR</var>}{<var>R</var>}</code>.
+                    Bereken nu de omtrek: <code>\pi</code>*r*2 = <var>R * 2</var><code>\pi</code></p>
 
                     <div class="graphie" data-update="circle">
                         drawRadius( R );
@@ -128,7 +129,7 @@
                 </div>
                 <p>Vind als eerste de straal van de cirkel: <code>r = d/2 = \color{<var>D_COLOR</var>}{<var>2 * R</var>}/2 = \color{<var>R_COLOR</var>}{<var>R</var>}</code>.</p>
                 <div>
-                    <p>Vind nu de oppervlakte van de cirkel: <code>K = \pi r^2</code>, dus <code>K = \pi \cdot \color{<var>R_COLOR</var>}{<var>R</var>}^2 = \color{<var>K_COLOR</var>}{<var>R * R</var>\pi}</code>.</p>
+                    <p>Vind nu de oppervlakte van de cirkel: <code>O = \pi r^2</code>, dus <code>O = \pi \cdot \color{<var>R_COLOR</var>}{<var>R</var>}^2 = \color{<var>K_COLOR</var>}{<var>R * R</var>\pi}</code>.</p>
 
                     <div class="graphie" data-update="circle">
                         drawArea( R );
@@ -154,7 +155,7 @@
 
                     drawArea( R );
                 </div>
-                <p>Bereken eerst de straal: <code>K = \pi r^2</code>, so <code>r = \sqrt{K / \pi} = \sqrt{\color{<var>K_COLOR</var>}{<var>R * R</var>\pi} / \pi} = \color{<var>R_COLOR</var>}{<var>R</var>}</code>.</p>
+                <p>Bereken eerst de straal: <code>O = \pi r^2</code> dus <code>r = \sqrt{O / \pi} = \sqrt{\color{<var>K_COLOR</var>}{<var>R * R</var>\pi} / \pi} = \color{<var>R_COLOR</var>}{<var>R</var>}</code>.</p>
                 <div>
                     <p>Bereken nu de diameter: <code>d = 2r = 2\cdot \color{<var>R_COLOR</var>}{<var>R</var>} = \color{<var>D_COLOR</var>}{<var>2*R</var>}</code>.</p>
 
@@ -184,7 +185,7 @@
                 </div>
                 <p>Bereken eerst de straal: <code>r = c/2\pi = \color{<var>C_COLOR</var>}{<var>2 * R</var>\pi}/2\pi = \color{<var>R_COLOR</var>}{<var>R</var>}</code>.</p>
                 <div>
-                    <p>Bereken nu de oppervlakte: <code>K = \pi r^2</code>, dus <code>K = \pi \cdot \color{<var>R_COLOR</var>}{<var>R</var>}^2 = \color{<var>K_COLOR</var>}{<var>R * R</var>\pi}</code>.</p>
+                    <p>Bereken nu de oppervlakte: <code>O = \pi r^2</code>, dus <code>K = \pi \cdot \color{<var>R_COLOR</var>}{<var>R</var>}^2 = \color{<var>K_COLOR</var>}{<var>R * R</var>\pi}</code>.</p>
 
                     <div class="graphie" data-update="circle">
                         drawArea( R );
@@ -210,9 +211,9 @@
 
                     drawArea( R );
                 </div>
-                <p>Bereken eerst de straal: <code>K = \pi r^2</code>, so <code>r = \sqrt{K / \pi} = \sqrt{\color{<var>K_COLOR</var>}{<var>R * R</var>\pi} / \pi} = \color{<var>R_COLOR</var>}{<var>R</var>}</code>.</p>
+                <p>Bereken eerst de straal: <code>O = \pi r^2</code> dus <code>r = \sqrt{O / \pi} = \sqrt{\color{<var>K_COLOR</var>}{<var>R * R</var>\pi} / \pi} = \color{<var>R_COLOR</var>}{<var>R</var>}</code>.</p>
                 <div>
-                    <p>Bereken nu de omtrek: <code>c = 2\pi r = 2\pi \cdot \color{<var>R_COLOR</var>}{<var>R</var>} = \color{<var>C_COLOR</var>}{<var>2*R</var>\pi}</code>.</p>
+                    <p>Bereken nu de omtrek: <code> = 2\pi r = 2\pi \cdot \color{<var>R_COLOR</var>}{<var>R</var>} = \color{<var>C_COLOR</var>}{<var>2*R</var>\pi}</code>.</p>
 
                     <div class="graphie" data-update="circle">
                         drawCircumference( R );
